--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "animejs": "^4.2.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
